--- a/teos/teos/CMakeLists.txt
+++ b/teos/teos/CMakeLists.txt
@@ -10,9 +10,9 @@ set( TEST_HTTP_ADDRESS "eos-testapi.tokenika.io:8888" )
 set( Boost_USE_STATIC_LIBS ON )
 set( Boost_USE_MULTITHREADED ON )
 set( Boost_USE_STATIC_RUNTIME OFF )
-set( BOOST_ROOT "$ENV{U_HOME}/opt/boost_1_66_0" )
+set( BOOST_ROOT "$ENV{U_HOME}/opt/boost" )
 
-find_package(Boost 1.66 REQUIRED COMPONENTS 
+find_package(Boost 1.67 REQUIRED COMPONENTS 
   thread  
   date_time   
   filesystem  
@@ -25,7 +25,7 @@ find_package(Boost 1.66 REQUIRED COMPONENTS
 )
 if( Boost_FOUND )
   message( STATUS "Boost found.
-  EOSIO_BOOST_INCLUDE_DIRS: ${EOSIO_BOOST_INCLUDE_DIRS}
+  Boost_INCLUDE_DIRS: ${Boost_INCLUDE_DIRS}
   Boost_LIBRARY_DIRS: ${Boost_LIBRARY_DIRS}" )
 else( Boost_FOUND )
   message ( STATUS "Boost not found. set environment variables:
@@ -71,7 +71,7 @@ macro( applLinkLibraries applName )
 
   target_include_directories( ${applName} 
     PRIVATE
-      ${EOSIO_BOOST_INCLUDE_DIR}
+      ${Boost_INCLUDE_DIRS}
       include
       "${teoslib_src}/include"
   )
