--- a/.gitignore
+++ b/.gitignore
@@ -27,8 +27,11 @@ teos/teos_lib/include/teoslib/config.h
 !/tests/test2.py
 !/tests/test3.py
 !/tests/unittest1.py
+!/tests/unittest1A.py
 !/tests/unittest2.py
+!/tests/unittest2A.py
 !/tests/unittest3.py
+!/tests/unittest3A.py
 
 !/pyteos/docs/build
 
