--- a/.gitignore
+++ b/.gitignore
@@ -18,9 +18,11 @@ teos/teos_lib/include/teoslib/config.h
 /contracts/*
 !/contracts/currency
 !/contracts/tic.tac.toe
+!/contracts/xs_and_os
 
 !/contracts/currency/build
 !/contracts/tic.tac.toe/build
+!/contracts/xs_and_os/build
 
 /tests/*
 !/tests/test1.py
