--- a/resources/config.ini
+++ b/resources/config.ini
@@ -1,89 +1,44 @@
-# the endpoint upon which to listen for incoming connections (eosio::bnet_plugin)
-bnet-endpoint = 0.0.0.0:4321
+# Track only transactions whose scopes involve the listed accounts. Default is to track all transactions. (eosio::account_history_plugin)
+# filter_on_accounts = 
 
-# this peer will request only irreversible blocks from other nodes (eosio::bnet_plugin)
-bnet-follow-irreversible = 0
+# Limits the maximum time (in milliseconds) processing a single get_transactions call. (eosio::account_history_plugin)
+get-transactions-time-limit = 3
 
-# the number of threads to use to process network messages (eosio::bnet_plugin)
-# bnet-threads = 
+# File to read Genesis State from (eosio::chain_plugin)
+genesis-json = "genesis.json"
 
-# remote endpoint of other node to connect to; Use multiple bnet-connect options as needed to compose a network (eosio::bnet_plugin)
-# bnet-connect = 
+# override the initial timestamp in the Genesis State file (eosio::chain_plugin)
+# genesis-timestamp = 
 
-# this peer will request no pending transactions from other nodes (eosio::bnet_plugin)
-bnet-no-trx = false
-
-# The string used to format peers when logging messages about them.  Variables are escaped with ${<variable name>}.
-# Available Variables:
-#    _name  	self-reported name
-# 
-#    _id    	self-reported ID (Public Key)
-# 
-#    _ip    	remote IP address of peer
-# 
-#    _port  	remote port number of peer
-# 
-#    _lip   	local IP address connected to peer
-# 
-#    _lport 	local port number connected to peer
-# 
-#  (eosio::bnet_plugin)
-bnet-peer-log-format = ["${_name}" ${_ip}:${_port}]
-
-# the location of the blocks directory (absolute path or relative to application data dir) (eosio::chain_plugin)
-blocks-dir = "blocks"
+# the location of the block log (absolute path or relative to application data dir) (eosio::chain_plugin)
+block-log-dir = "blocks"
 
 # Pairs of [BLOCK_NUM,BLOCK_ID] that should be enforced as checkpoints. (eosio::chain_plugin)
 # checkpoint = 
 
+# Limits the maximum time (in milliseconds) that a reversible block is allowed to run before being considered invalid (eosio::chain_plugin)
+max-reversible-block-time = -1
+
+# Limits the maximum time (in milliseconds) that is allowed a pushed transaction's code to execute before being considered invalid (eosio::chain_plugin)
+max-pending-transaction-time = -1
+
+# Limits the maximum time (in milliseconds) that is allowed a to push deferred transactions at the start of a block (eosio::chain_plugin)
+max-deferred-transaction-time = 20
+
 # Override default WASM runtime (eosio::chain_plugin)
 # wasm-runtime = 
 
-# Maximum size (in MB) of the chain state database (eosio::chain_plugin)
-chain-state-db-size-mb = 1024
+# Time to wait, in milliseconds, between creating next faucet created account. (eosio::faucet_testnet_plugin)
+faucet-create-interval-ms = 1000
 
-# Maximum size (in MB) of the reversible blocks database (eosio::chain_plugin)
-reversible-blocks-db-size-mb = 340
+# Name to use as creator for faucet created accounts. (eosio::faucet_testnet_plugin)
+faucet-name = faucet
 
-# print contract's output to console (eosio::chain_plugin)
-contracts-console = false
+# [public key, WIF private key] for signing for faucet creator account (eosio::faucet_testnet_plugin)
+faucet-private-key = ["EOS6MRyAjQq8ud7hVNYcfnVPJqcVpscN5So8BhtHuGYqET5GDW5CV","5KQwrPbwdL6PhXujxW37FSSQZ1JiwsST4cqQzDeyXtP79zkvFD3"]
 
-# Account added to actor whitelist (may specify multiple times) (eosio::chain_plugin)
-# actor-whitelist = 
-
-# Account added to actor blacklist (may specify multiple times) (eosio::chain_plugin)
-# actor-blacklist = 
-
-# Contract account added to contract whitelist (may specify multiple times) (eosio::chain_plugin)
-# contract-whitelist = 
-
-# Contract account added to contract blacklist (may specify multiple times) (eosio::chain_plugin)
-# contract-blacklist = 
-
-# Action (in the form code::action) added to action blacklist (may specify multiple times) (eosio::chain_plugin)
-# action-blacklist = 
-
-# Track actions which match receiver:action:actor. Actor may be blank to include all. Receiver and Action may not be blank. (eosio::history_plugin)
-# filter-on = 
-
-# PEM encoded trusted root certificate (or path to file containing one) used to validate any TLS connections made.  (may specify multiple times)
-#  (eosio::http_client_plugin)
-# https-client-root-cert = 
-
-# true: validate that the peer certificates are valid and trusted, false: ignore cert errors (eosio::http_client_plugin)
-https-client-validate-peers = 1
-
-# The local IP and port to listen for incoming http connections; set blank to disable. (eosio::http_plugin)
+# The local IP and port to listen for incoming http connections. (eosio::http_plugin)
 http-server-address = 127.0.0.1:8888
-
-# The local IP and port to listen for incoming https connections; leave blank to disable. (eosio::http_plugin)
-# https-server-address = 
-
-# Filename with the certificate chain to present on https connections. PEM format. Required for https. (eosio::http_plugin)
-# https-certificate-chain-file = 
-
-# Filename with https private key in PEM format. Required for https (eosio::http_plugin)
-# https-private-key-file = 
 
 # Specify the Access-Control-Allow-Origin to be returned on each request. (eosio::http_plugin)
 # access-control-allow-origin = 
@@ -91,11 +46,14 @@ http-server-address = 127.0.0.1:8888
 # Specify the Access-Control-Allow-Headers to be returned on each request. (eosio::http_plugin)
 # access-control-allow-headers = 
 
-# Specify the Access-Control-Max-Age to be returned on each request. (eosio::http_plugin)
-# access-control-max-age = 
-
 # Specify if Access-Control-Allow-Credentials: true should be returned on each request. (eosio::http_plugin)
 access-control-allow-credentials = false
+
+# The queue size between nodeos and MongoDB plugin thread. (eosio::mongo_db_plugin)
+mongodb-queue-size = 256
+
+# MongoDB URI connection string, see: https://docs.mongodb.com/master/reference/connection-string/. If not specified then plugin is disabled. Default database 'EOS' is used if not specified in URI. (eosio::mongo_db_plugin)
+# mongodb-uri = 
 
 # The actual host:port used to listen for incoming p2p connections. (eosio::net_plugin)
 p2p-listen-endpoint = 0.0.0.0:9876
@@ -105,9 +63,6 @@ p2p-listen-endpoint = 0.0.0.0:9876
 
 # The public endpoint of a peer node to connect to. Use multiple p2p-peer-address options as needed to compose a network. (eosio::net_plugin)
 # p2p-peer-address = 
-
-# Maximum number of client0nodes from any single IP address (eosio::net_plugin)
-p2p-max-nodes-per-host = 1
 
 # The name supplied to identify this node amongst the peers. (eosio::net_plugin)
 agent-name = "EOS Test Agent"
@@ -121,6 +76,9 @@ allowed-connection = any
 # Tuple of [PublicKey, WIF private key] (may specify multiple times) (eosio::net_plugin)
 # peer-private-key = 
 
+# Log level: one of 'all', 'debug', 'info', 'warn', 'error', or 'off' (eosio::net_plugin)
+log-level-net-plugin = info
+
 # Maximum number of clients from which connections are accepted, use 0 for no limit (eosio::net_plugin)
 max-clients = 25
 
@@ -133,70 +91,23 @@ network-version-match = 0
 # number of blocks to retrieve in a chunk from any individual peer during synchronization (eosio::net_plugin)
 sync-fetch-span = 100
 
-# maximum sizes of transaction or block messages that are sent without first sending a notice (eosio::net_plugin)
-max-implicit-request = 1500
-
-# The string used to format peers when logging messages about them.  Variables are escaped with ${<variable name>}.
-# Available Variables:
-#    _name  	self-reported name
-# 
-#    _id    	self-reported ID (64 hex characters)
-# 
-#    _sid   	first 8 characters of _peer.id
-# 
-#    _ip    	remote IP address of peer
-# 
-#    _port  	remote port number of peer
-# 
-#    _lip   	local IP address connected to peer
-# 
-#    _lport 	local port number connected to peer
-# 
-#  (eosio::net_plugin)
-peer-log-format = ["${_name}" ${_ip}:${_port}]
-
 # Enable block production, even if the chain is stale. (eosio::producer_plugin)
 # enable-stale-production = false
 
-# Start this node in a state where production is paused (eosio::producer_plugin)
-pause-on-startup = false
-
-# Limits the maximum time (in milliseconds) that is allowed a pushed transaction's code to execute before being considered invalid (eosio::producer_plugin)
-max-transaction-time = 30
-
-# Limits the maximum age (in seconds) of the DPOS Irreversible Block for a chain this node will produce blocks on (use negative value to indicate unlimited) (eosio::producer_plugin)
-max-irreversible-block-age = -1
+# Percent of producers (0-100) that must be participating in order to produce blocks (eosio::producer_plugin)
+required-participation = 33
 
 # ID of producer controlled by this node (e.g. inita; may specify multiple times) (eosio::producer_plugin)
 # producer-name = 
 
-# (DEPRECATED - Use signature-provider instead) Tuple of [public key, WIF private key] (may specify multiple times) (eosio::producer_plugin)
-# private-key = 
-
-# Key=Value pairs in the form <public-key>=<provider-spec>
-# Where:
-#    <public-key>    	is a string form of a vaild EOSIO public key
-# 
-#    <provider-spec> 	is a string in the form <provider-type>:<data>
-# 
-#    <provider-type> 	is KEY, or KEOSD
-# 
-#    KEY:<data>      	is a string form of a valid EOSIO private key which maps to the provided public key
-# 
-#    KEOSD:<data>    	is the URL where keosd is available and the approptiate wallet(s) are unlocked (eosio::producer_plugin)
-signature-provider = EOS6MRyAjQq8ud7hVNYcfnVPJqcVpscN5So8BhtHuGYqET5GDW5CV=KEY:5KQwrPbwdL6PhXujxW37FSSQZ1JiwsST4cqQzDeyXtP79zkvFD3
-
-# Limits the maximum time (in milliseconds) that is allowd for sending blocks to a keosd provider for signing (eosio::producer_plugin)
-keosd-provider-timeout = 5
-
-# Lag in number of blocks from the head block when selecting the reference block for transactions (-1 means Last Irreversible Block) (eosio::txn_test_gen_plugin)
-txn-reference-block-lag = 0
+# Tuple of [public key, WIF private key] (may specify multiple times) (eosio::producer_plugin)
+private-key = ["EOS6MRyAjQq8ud7hVNYcfnVPJqcVpscN5So8BhtHuGYqET5GDW5CV","5KQwrPbwdL6PhXujxW37FSSQZ1JiwsST4cqQzDeyXtP79zkvFD3"]
 
 # The path of the wallet files (absolute path or relative to application data dir) (eosio::wallet_plugin)
 wallet-dir = "."
 
-# Timeout for unlocked wallet in seconds (default 900 (15 minutes)). Wallets will automatically lock after specified number of seconds of inactivity. Activity is defined as any wallet command e.g. list-wallets. (eosio::wallet_plugin)
-unlock-timeout = 900
+# Timeout for unlocked wallet in seconds. Wallets will automatically lock after specified number of seconds of inactivity. Activity is defined as any wallet command e.g. list-wallets. (eosio::wallet_plugin)
+# unlock-timeout = 
 
 # eosio key that will be imported automatically when a wallet is created. (eosio::wallet_plugin)
 # eosio-key = 
