--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,4 @@ teos/teos_lib/eos_interface.1.cpp#
 .vscode/settings.json
 .vscode/tasks.json
 vsc_extension/vscode-extension-samples/
+pyteos/appJar
