--- a/.gitignore
+++ b/.gitignore
@@ -7,11 +7,8 @@ Makefile
 teos/teos/include/teos/config.h
 teos/teos_lib/include/teoslib/config.h
 
-!docs/Makefile
-!docs/source
-!docs/build
-docs/build/doctrees
-!docs/build/html
+/docs/sphinx/build
+!/docs/sphinx/Makefile
 
 /contracts/*
 
