--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,20 @@
-workdir
 *.exe
-b
 build
+
 Makefile
+CMakeFiles
+cmake_install.cmake
+CMakeCache.txt
 
 teos/teos/include/teos/config.h
 teos/teos_lib/include/teoslib/config.h
 
 /docs/sphinx/build
 !/docs/sphinx/Makefile
+
+!/contracts/hello/build
+!/contracts/tic_tac_toe_jungle/build
+!/contracts/token/build
 
 **/.vs
 *.pyc
@@ -20,7 +26,3 @@ teos/source/conf.py
 .vscode/launch.json
 .vscode/settings.json
 .vscode/tasks.json
-
-vsc_extension/vscode-extension-samples/
-pyteos/appJar
-trash
