--- a/contracts/01_hello_world/.vscode/tasks.json
+++ b/contracts/01_hello_world/.vscode/tasks.json
@@ -7,13 +7,13 @@
         "taskName": "Compile",
         "type": "shell",
         "windows": {
-            "command": "source ~/.profile; mkdir -p build; ${env:eosf} build contract \"${workspaceFolder}\"/src -c"
+            "command": "source ~/.profile; mkdir -p build; python3 -c 'import core.teos as teos; teos.WAST(\"${workspaceFolder}/src\", compile_only=True)'"
         },
         "osx": {
-            "command": "mkdir -p build; ${eosf} build contract \"${workspaceFolder}\"/src -c"
+            "command": "mkdir -p build; python3 -c 'import core.teos as teos; teos.WAST(\"${workspaceFolder}/src\", compile_only=True)'"
         },
         "linux": {
-            "command": "mkdir -p build; ${eosf} build contract \"${workspaceFolder}\"/src -c"
+            "command": "mkdir -p build; python3 -c 'import core.teos as teos; teos.WAST(\"${workspaceFolder}/src\", compile_only=True)'"
         },
         "presentation": {
             "reveal": "always",
@@ -26,13 +26,13 @@
         "taskName": "Build",
         "type": "shell",
         "windows": {
-            "command": "source ~/.profile; mkdir -p build; ${env:eosf} generate abi \"${workspaceFolder}\"/src;${env:eosf} build contract \"${workspaceFolder}\"/src"
+            "command": "source ~/.profile; mkdir -p build; python3 -c 'import core.teos as teos; teos.ABI(\"${workspaceFolder}/src\"); teos.WAST(\"${workspaceFolder}/src\")'"
         },
         "osx": {
-            "command": "mkdir -p build; ${eosf} generate abi \"${workspaceFolder}\"/src; ${eosf} build contract \"${workspaceFolder}\"/src"
+            "command": "mkdir -p build; python3 -c 'import core.teos as teos; teos.ABI(\"${workspaceFolder}/src\"); teos.WAST(\"${workspaceFolder}/src\")'"
         },
         "linux": {
-            "command": "mkdir -p build; ${eosf} generate abi \"${workspaceFolder}\"/src; ${eosf} build contract \"${workspaceFolder}\"/src"
+            "command": "mkdir -p build; python3 -c 'import core.teos as teos; teos.ABI(\"${workspaceFolder}/src\"); teos.WAST(\"${workspaceFolder}/src\")'"
         },
         "problemMatcher": [],
         "presentation": {
@@ -50,13 +50,13 @@
         "taskName": "Test",
         "type": "shell",
         "windows": {
-            "command": "source ~/.profile; python3 ./test/test1.py"
+            "command": "source ~/.profile; python3 ./tests/test1.py"
         },
         "osx": {
-            "command": "python3 ./test/test1.py"
+            "command": "python3 ./tests/test1.py"
         },
         "linux": {
-            "command": "python3 ./test/test1.py"
+            "command": "python3 ./tests/test1.py"
         },
         "presentation": {
             "reveal": "always",
@@ -69,13 +69,13 @@
         "taskName": "Unittest",
         "type": "shell",
         "windows": {
-            "command": "source ~/.profile; python3 ./test/unittest1.py"
+            "command": "source ~/.profile; python3 ./tests/unittest1.py"
         },
         "osx": {
-            "command": "python3 ./test/unittest1.py"
+            "command": "python3 ./tests/unittest1.py"
         },
         "linux": {
-            "command": "python3 ./test/unittest1.py"
+            "command": "python3 ./tests/unittest1.py"
         },
         "presentation": {
             "reveal": "always",
@@ -109,4 +109,3 @@
 ]
 }
  
-
