--- a/contracts/01_hello_world/.vscode/tasks.json
+++ b/contracts/01_hello_world/.vscode/tasks.json
@@ -50,13 +50,13 @@
         "taskName": "Test",
         "type": "shell",
         "windows": {
-            "command": "source ~/.profile; python3 ./tests/test1.py"
+            "command": "source ~/.profile; python3 ./test/test1.py"
         },
         "osx": {
-            "command": "python3 ./tests/test1.py"
+            "command": "python3 ./test/test1.py"
         },
         "linux": {
-            "command": "python3 ./tests/test1.py"
+            "command": "python3 ./test/test1.py"
         },
         "presentation": {
             "reveal": "always",
@@ -69,13 +69,13 @@
         "taskName": "Unittest",
         "type": "shell",
         "windows": {
-            "command": "source ~/.profile; python3 ./tests/unittest1.py"
+            "command": "source ~/.profile; python3 ./test/unittest1.py"
         },
         "osx": {
-            "command": "python3 ./tests/unittest1.py"
+            "command": "python3 ./test/unittest1.py"
         },
         "linux": {
-            "command": "python3 ./tests/unittest1.py"
+            "command": "python3 ./test/unittest1.py"
         },
         "presentation": {
             "reveal": "always",
