--- a/templates/contracts/03_tic_tac_toe/.vscode/tasks.json
+++ b/templates/contracts/03_tic_tac_toe/.vscode/tasks.json
@@ -7,7 +7,7 @@
         "taskName": "Compile",
         "type": "shell",
         "windows": {
-            "command": "source ~/.profile; mkdir -p build; python3 -c 'import core.teos as teos; teos.WAST(\"${workspaceFolder}/src\", compile_only=True)'"
+            "command": "source ~/.profile; mkdir -p build; python3 -c 'import core.teos as teos; teos.WAST(r\"${workspaceFolder}/src\", compile_only=True)'"
         },
         "osx": {
             "command": "mkdir -p build; python3 -c 'import core.teos as teos; teos.WAST(\"${workspaceFolder}/src\", compile_only=True)'"
@@ -26,7 +26,7 @@
         "taskName": "Build",
         "type": "shell",
         "windows": {
-            "command": "source ~/.profile; mkdir -p build; python3 -c 'import core.teos as teos; teos.ABI(\"${workspaceFolder}/src\"); teos.WAST(\"${workspaceFolder}/src\")'"
+            "command": "source ~/.profile; mkdir -p build; python3 -c 'import core.teos as teos; teos.ABI(r\"${workspaceFolder}/src\"); teos.WAST(r\"${workspaceFolder}/src\")'"
         },
         "osx": {
             "command": "mkdir -p build; python3 -c 'import core.teos as teos; teos.ABI(\"${workspaceFolder}/src\"); teos.WAST(\"${workspaceFolder}/src\")'"
