nodeos config.ini standardized

--- a/resources/config.ini
+++ b/resources/config.ini
@@ -247,7 +247,7 @@ use-socket-read-watermark = 0
 peer-log-format = ["${_name}" ${_ip}:${_port}]
 
 # Enable block production, even if the chain is stale. (eosio::producer_plugin)
-# enable-stale-production = false
+enable-stale-production = false
 
 # Start this node in a state where production is paused (eosio::producer_plugin)
 pause-on-startup = false
@@ -298,11 +298,3 @@ txn-reference-block-lag = 0
 # Plugin(s) to enable, may be specified multiple times
 # plugin = 
 
-max-transaction-time = 300
-enable-stale-production = true
-producer-name = eosio
-
-plugin = eosio::producer_plugin
-plugin = eosio::chain_api_plugin
-plugin = eosio::http_plugin
-plugin = eosio::history_api_plugin
