local node upgraded -- installation tests passed

--- a/localnode/daemon/data-dir/config.ini
+++ b/localnode/daemon/data-dir/config.ini
@@ -88,9 +88,6 @@ read-mode = speculative
 #  (eosio::chain_plugin)
 validation-mode = full
 
-# Disable the check which subjectively fails a transaction if a contract bills more RAM to another account within the context of a notification handler (i.e. when the receiver is not the code of the action). (eosio::chain_plugin)
-disable-ram-billing-notify-checks = false
-
 # Track actions which match receiver:action:actor. Actor may be blank to include all. Action and Actor both blank allows all from Recieiver. Receiver may not be blank. (eosio::history_plugin)
 # filter-on = 
 
@@ -176,10 +173,10 @@ mongodb-store-transaction-traces = 1
 # Enables storing action traces in mongodb. (eosio::mongo_db_plugin)
 mongodb-store-action-traces = 1
 
-# Track actions which match receiver:action:actor. Receiver, Action, & Actor may be blank to include all. i.e. eosio:: or :transfer:  Use * or leave unspecified to include all. (eosio::mongo_db_plugin)
+# Mongodb: Track actions which match receiver:action:actor. Actor may be blank to include all. Receiver and Action may not be blank. Default is * include everything. (eosio::mongo_db_plugin)
 # mongodb-filter-on = 
 
-# Do not track actions which match receiver:action:actor. Receiver, Action, & Actor may be blank to exclude all. (eosio::mongo_db_plugin)
+# Mongodb: Do not track actions which match receiver:action:actor. Action and Actor both blank excludes all from reciever. Actor blank excludes all from reciever:action. Receiver may not be blank. (eosio::mongo_db_plugin)
 # mongodb-filter-out = 
 
 # The actual host:port used to listen for incoming p2p connections. (eosio::net_plugin)
@@ -253,7 +250,7 @@ enable-stale-production = false
 pause-on-startup = false
 
 # Limits the maximum time (in milliseconds) that is allowed a pushed transaction's code to execute before being considered invalid (eosio::producer_plugin)
-# max-transaction-time = 30
+max-transaction-time = 30
 
 # Limits the maximum age (in seconds) of the DPOS Irreversible Block for a chain this node will produce blocks on (use negative value to indicate unlimited) (eosio::producer_plugin)
 max-irreversible-block-age = -1
