environmental variables in profile -- removed

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,13 @@ tests/eosjsecc.js
 localnode/state
 localnode/blocks
 transcrypt
+
+
+# Compiled python modules.
+*.pyc
+
+# Setuptools distribution folder.
+/dist/
+
+# Python egg metadata, regenerated from source files by setuptools.
+/*.egg-info
