--- a/contracts/01_hello_world/.vscode/tasks.json
+++ b/contracts/01_hello_world/.vscode/tasks.json
@@ -6,15 +6,7 @@
     {
         "taskName": "Compile",
         "type": "shell",
-        "windows": {
-            "command": "source ~/.profile; mkdir -p build; python3 -c 'import core.teos as teos; teos.WAST(r\"${workspaceFolder}/src\", compile_only=True)'"
-        },
-        "osx": {
-            "command": "mkdir -p build; python3 -c 'import core.teos as teos; teos.WAST(\"${workspaceFolder}/src\", compile_only=True)'"
-        },
-        "linux": {
-            "command": "mkdir -p build; python3 -c 'import core.teos as teos; teos.WAST(\"${workspaceFolder}/src\", compile_only=True)'"
-        },
+        "command": "mkdir -p build; python3 -c 'import eosfactory.core.teos as teos; teos.WAST(r\"${workspaceFolder}/src\", compile_only=True)'",
         "presentation": {
             "reveal": "always",
             "panel": "dedicated"
@@ -25,15 +17,7 @@
     {
         "taskName": "Build",
         "type": "shell",
-        "windows": {
-            "command": "source ~/.profile; mkdir -p build; python3 -c 'import core.teos as teos; teos.ABI(r\"${workspaceFolder}/src\"); teos.WAST(r\"${workspaceFolder}/src\")'"
-        },
-        "osx": {
-            "command": "mkdir -p build; python3 -c 'import core.teos as teos; teos.ABI(\"${workspaceFolder}/src\"); teos.WAST(\"${workspaceFolder}/src\")'"
-        },
-        "linux": {
-            "command": "mkdir -p build; python3 -c 'import core.teos as teos; teos.ABI(\"${workspaceFolder}/src\"); teos.WAST(\"${workspaceFolder}/src\")'"
-        },
+        "command": "mkdir -p build; python3 -c 'import eosfactory.core.teos as teos; teos.ABI(r\"${workspaceFolder}/src\"); teos.WAST(r\"${workspaceFolder}/src\")'",
         "problemMatcher": [],
         "presentation": {
             "reveal": "always",
@@ -49,15 +33,7 @@
     {
         "taskName": "Test",
         "type": "shell",
-        "windows": {
-            "command": "source ~/.profile; python3 ./tests/test1.py"
-        },
-        "osx": {
-            "command": "python3 ./tests/test1.py"
-        },
-        "linux": {
-            "command": "python3 ./tests/test1.py"
-        },
+        "command": "python3 ./tests/test1.py",
         "presentation": {
             "reveal": "always",
             "panel": "dedicated"
@@ -68,15 +44,7 @@
     {
         "taskName": "Unittest",
         "type": "shell",
-        "windows": {
-            "command": "source ~/.profile; python3 ./tests/unittest1.py"
-        },
-        "osx": {
-            "command": "python3 ./tests/unittest1.py"
-        },
-        "linux": {
-            "command": "python3 ./tests/unittest1.py"
-        },
+        "command": "python3 ./tests/unittest1.py",
         "presentation": {
             "reveal": "always",
             "panel": "dedicated"
@@ -87,15 +55,7 @@
     {
         "taskName": "EOSIO API",
         "type": "shell",
-        "windows": {
-            "command": "explorer.exe"
-        },
-        "osx": {
-            "command": "open"
-        },
-        "linux": {
-            "command": "sensible-browser"
-        },
+        "command": "explorer.exe",
         "args": [
             "https://developers.eos.io/eosio-cpp/reference"
         ],
