--- a/tests/integration/Dockerfile
+++ b/tests/integration/Dockerfile
@@ -1,30 +1,7 @@
-FROM eosio/builder as builder
-
-ENV DEBIAN_FRONTEND noninteractive
-
-RUN apt-get update \
-    && apt-get -y install openssl         \
-                       ca-certificates    \
-                       git                \
-                       python3-pip        \
-                       python3-setuptools \
-                       cmake              \
-                       libgmp3-dev        \
-                       doxygen            \
-                       graphviz           \
-                       tk-dev             \
-    && rm -rf /var/lib/apt/lists/*
-
-##############     EOS     #############################################################################################
-
 ARG eos_branch=v1.3.1
 ARG eos_symbol=SYS
 
-RUN git clone -b $eos_branch https://github.com/EOSIO/eos.git --recursive /opt/eos
-WORKDIR /opt/eos
-
-RUN ./eosio_build.sh
-RUN ./eosio_install.sh
+FROM tokenika/eosio:${eos_branch}
 
 ##############   PYTHON    #############################################################################################
 ## Based mostly on https://github.com/docker-library/python/blob/005dda958/3.5/jessie/Dockerfile
