--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,11 @@ services:
   - docker
 
 before_install:
-  - docker build -t e2e --build-arg eosfactory_branch=master ./tests/integration/
+  - docker build -t e2e_a --build-arg eosfactory_branch=master --build-arg python_version=3.5.6 ./tests/integration/
+  - docker build -t e2e_b --build-arg eosfactory_branch=master --build-arg python_version=3.7.0./tests/integration/
+  - docker build -t e2e_c --build-arg eosfactory_branch=master --build-arg python_version=3.7.0./tests/integration/
 
 script:
-  - docker run -ti e2e ./unittest.sh
+  - docker run -ti e2e_a ./unittest.sh
+  - docker run -ti e2e_b ./unittest.sh
+  - docker run -ti e2e_c ./unittest.sh
