--- a/contracts/02_eosio_token/.vscode/tasks.json
+++ b/contracts/02_eosio_token/.vscode/tasks.json
@@ -10,7 +10,7 @@
             "command": "mkdir -p build; python3 -c 'import eosfactory.core.teos as teos; teos.WAST(r\"${workspaceFolder}/src\", compile_only=True)'"
         },
         "osx": {
-            "command": "python3 -c 'import eosfactory.core.teos as teos; teos.WAST(\"${workspaceFolder}/src\", compile_only=True)'"
+            "command": "mkdir -p build; python3 -c 'import eosfactory.core.teos as teos; teos.WAST(\"${workspaceFolder}/src\", compile_only=True)'"
         },
         "linux": {
             "command": "mkdir -p build; python3 -c 'import eosfactory.core.teos as teos; teos.WAST(\"${workspaceFolder}/src\", compile_only=True)'"
@@ -69,7 +69,7 @@
         "taskName": "Unittest",
         "type": "shell",
         "windows": {
-            "command": "source ~/.profile; python3 ./tests/unittest1.py"
+            "command": "python3 ./tests/unittest1.py"
         },
         "osx": {
             "command": "python3 ./tests/unittest1.py"
