--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,22 @@ dist: trusty
 jobs:
   include:
     - stage: build docker images
-      script: docker build -t e2e_a --build-arg eosfactory_branch=master --build-arg python_version=3.5.6 ./tests/integration/
-    - script: docker build -t e2e_b --build-arg eosfactory_branch=master --build-arg python_version=3.7.0 ./tests/integration/
-    - script: docker build -t e2e_c --build-arg eosfactory_branch=master --build-arg python_version=3.7.0 ./tests/integration/
+      script:
+        - docker build -t tokenika/e2e:${TRAVIS_COMMIT}_a --build-arg eosfactory_branch=$TRAVIS_BRANCH --build-arg python_version=3.5.6 ./tests/integration/ 
+        - docker login -u $DOCKER_USER -p $DOCKER_PASS
+        - docker push tokenika/eosio:$TRAVIS_COMMIT
+
+    - script:
+        - docker build -t tokenika/e2e:${TRAVIS_COMMIT}_b --build-arg eosfactory_branch=$TRAVIS_BRANCH --build-arg python_version=3.6.6 ./tests/integration/
+        - docker login -u $DOCKER_USER -p $DOCKER_PASS
+        - docker push tokenika/eosio:$TRAVIS_COMMIT
+
+    - script:
+        - docker build -t tokenika/e2e:${TRAVIS_COMMIT}_c --build-arg eosfactory_branch=$TRAVIS_BRANCH --build-arg python_version=3.7.0 ./tests/integration/
+        - docker login -u $DOCKER_USER -p $DOCKER_PASS
+        - docker push tokenika/eosio:$TRAVIS_COMMIT
+
     - stage: tests
-      script: docker run -ti e2e_a ./unittest.sh
-    - script: docker run -ti e2e_b ./unittest.sh
-    - script: docker run -ti e2e_c ./unittest.sh
+      script: docker run -ti tokenika/e2e:${TRAVIS_COMMIT}_a ./unittest.sh
+    - script: docker run -ti tokenika/e2e:${TRAVIS_COMMIT}_b ./unittest.sh
+    - script: docker run -ti tokenika/e2e:${TRAVIS_COMMIT}_c ./unittest.sh
