--- a/.travis.yml
+++ b/.travis.yml
@@ -7,17 +7,17 @@ jobs:
       script:
         - docker build -t tokenika/e2e:${TRAVIS_COMMIT}_a --build-arg eosfactory_branch=$TRAVIS_BRANCH --build-arg python_version=3.5.6 ./tests/integration/ 
         - docker login -u $DOCKER_USER -p $DOCKER_PASS
-        - docker push tokenika/eosio:$TRAVIS_COMMIT
+        - docker push tokenika/e2e:${TRAVIS_COMMIT}_a
 
     - script:
         - docker build -t tokenika/e2e:${TRAVIS_COMMIT}_b --build-arg eosfactory_branch=$TRAVIS_BRANCH --build-arg python_version=3.6.6 ./tests/integration/
         - docker login -u $DOCKER_USER -p $DOCKER_PASS
-        - docker push tokenika/eosio:$TRAVIS_COMMIT
+        - docker push tokenika/e2e:${TRAVIS_COMMIT}_b
 
     - script:
         - docker build -t tokenika/e2e:${TRAVIS_COMMIT}_c --build-arg eosfactory_branch=$TRAVIS_BRANCH --build-arg python_version=3.7.0 ./tests/integration/
         - docker login -u $DOCKER_USER -p $DOCKER_PASS
-        - docker push tokenika/eosio:$TRAVIS_COMMIT
+        - docker push tokenika/e2e:${TRAVIS_COMMIT}_c
 
     - stage: tests
       script: docker run -ti tokenika/e2e:${TRAVIS_COMMIT}_a ./unittest.sh
