--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,6 @@ env:
 
 script:
   - docker build -t tokenika/e2e:${TRAVIS_COMMIT}_${EOS_BRANCH}_${PYTHON_VERSION} --build-arg eos_branch=${EOS_BRANCH} --build-arg eosfactory_branch=${TRAVIS_BRANCH} --build-arg python_version=${PYTHON_VERSION} ./tests/integration/
-  - docker run -ti tokenika/e2e:${TRAVIS_COMMIT}_${EOS_BRANCH}_${PYTHON_VERSION} ./unittest.sh
+  - docker run -ti tokenika/e2e:${TRAVIS_COMMIT}_${EOS_BRANCH}_${PYTHON_VERSION} "python /opt/eosfactory/tests/01_hello_world.py"
+  - docker run -ti tokenika/e2e:${TRAVIS_COMMIT}_${EOS_BRANCH}_${PYTHON_VERSION} "python /opt/eosfactory/tests/02_eosio_token.py"
+  - docker run -ti tokenika/e2e:${TRAVIS_COMMIT}_${EOS_BRANCH}_${PYTHON_VERSION} "python /opt/eosfactory/tests/03_tic_tac_toe.py"
