corrected mistake in 'template_create': tests passed

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,7 @@ localnode/blocks
 /*.egg-info
 tests/js
 
+docs/tutorials/style.css
+docs/tutorials/00.IntroductionToEOSFactory.html
+docs/tutorials/03.BuildingAndDeployingEOSContractsInEOSFactory.html
+docs/tutorials/05.InteractingWithPublicTestnet.html
