--- a/contracts/03_tic_tac_toe/.vscode/tasks.json
+++ b/contracts/03_tic_tac_toe/.vscode/tasks.json
@@ -1,111 +1,149 @@
+
 {
-    // See https://go.microsoft.com/fwlink/?LinkId=733558
-    // for the documentation about the tasks.json format
     "version": "2.0.0",   
-"tasks": [
-    {
-        "taskName": "Compile",
-        "type": "shell",
-        "windows": {
-            "command": "mkdir -p build; python3 -c 'import eosfactory.core.teos as teos; teos.WAST(r\"${workspaceFolder}/src\", compile_only=True)'"
+    "tasks": [
+        {
+            "taskName": "Compile",
+            "type": "shell",
+            "windows": {
+                "options": {
+                    "shell": {
+                        "executable": "bash.exe",
+                        "args": [
+                            "-c"
+                        ]
+                    }
+                },
+                "command": "mkdir -p build; python3 -m eosfactory.core.build '${workspaceFolder}' --compile"
+            },
+            "osx": {
+                "command": "mkdir -p build; python3 -m eosfactory.core.build '${workspaceFolder}' --compile"
+            },
+            "linux": {
+                "command": "mkdir -p build; python3 -m eosfactory.core.build '${workspaceFolder}' --compile"
+            },
+            "presentation": {
+                "reveal": "always",
+                "panel": "dedicated"
+            },
+            "problemMatcher": [
+            ]
         },
-        "osx": {
-            "command": "mkdir -p build; python3 -c 'import eosfactory.core.teos as teos; teos.WAST(\"${workspaceFolder}/src\", compile_only=True)'"
+        {
+            "taskName": "Build",
+            "type": "shell",
+            "windows": {
+                "options": {
+                    "shell": {
+                        "executable": "bash.exe",
+                        "args": [
+                            "-c"
+                        ]
+                    }
+                },
+                "command": "mkdir -p build; python3 -m eosfactory.core.build '${workspaceFolder}'"        
+            },
+            "osx": {
+                "command": "mkdir -p build; python3 -m eosfactory.core.build '${workspaceFolder}'"
+            },
+            "linux": {
+                "command": "mkdir -p build; python3 -m eosfactory.core.build '${workspaceFolder}'"
+            },
+            "problemMatcher": [],
+            "presentation": {
+                "reveal": "always",
+                "panel": "dedicated"
+            },
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "problemMatcher": [
+            ]
         },
-        "linux": {
-            "command": "mkdir -p build; python3 -c 'import eosfactory.core.teos as teos; teos.WAST(\"${workspaceFolder}/src\", compile_only=True)'"
+        {
+            "taskName": "Test",
+            "type": "shell",
+            "windows": {
+                "options": {
+                    "shell": {
+                        "executable": "bash.exe",
+                        "args": [
+                            "-c"
+                        ]
+                    }
+                },            
+                "command": "python3 ./tests/test1.py"
+            },
+            "osx": {
+                "command": "python3 ./tests/test1.py"
+            },
+            "linux": {
+                "command": "python3 ./tests/test1.py"
+            },
+            "presentation": {
+                "reveal": "always",
+                "panel": "dedicated"
+            },
+            "problemMatcher": [
+            ]
         },
-        "presentation": {
-            "reveal": "always",
-            "panel": "dedicated"
+        {
+            "taskName": "Unittest",
+            "type": "shell",
+            "windows": {
+                "options": {
+                    "shell": {
+                        "executable": "bash.exe",
+                        "args": [
+                            "-c"
+                        ]
+                    }
+                },            
+                "command": "python3 ./tests/unittest1.py"
+            },
+            "osx": {
+                "command": "python3 ./tests/unittest1.py"
+            },
+            "linux": {
+                "command": "python3 ./tests/unittest1.py"
+            },
+            "presentation": {
+                "reveal": "always",
+                "panel": "dedicated"
+            },
+            "problemMatcher": [
+            ]
         },
-        "problemMatcher": [
-        ]
-    },
-    {
-        "taskName": "Build",
-        "type": "shell",
-        "windows": {
-            "command": "mkdir -p build; python3 -c 'import eosfactory.core.teos as teos; teos.ABI(r\"${workspaceFolder}/src\"); teos.WAST(r\"${workspaceFolder}/src\")'"
-        },
-        "osx": {
-            "command": "mkdir -p build; python3 -c 'import eosfactory.core.teos as teos; teos.ABI(\"${workspaceFolder}/src\"); teos.WAST(\"${workspaceFolder}/src\")'"
-        },
-        "linux": {
-            "command": "mkdir -p build; python3 -c 'import eosfactory.core.teos as teos; teos.ABI(\"${workspaceFolder}/src\"); teos.WAST(\"${workspaceFolder}/src\")'"
-        },
-        "problemMatcher": [],
-        "presentation": {
-            "reveal": "always",
-            "panel": "dedicated"
-        },
-        "group": {
-            "kind": "build",
-            "isDefault": true
-        },
-        "problemMatcher": [
-        ]
-    },
-    {
-        "taskName": "Test",
-        "type": "shell",
-        "windows": {
-            "command": "python3 ./tests/test1.py"
-        },
-        "osx": {
-            "command": "python3 ./tests/test1.py"
-        },
-        "linux": {
-            "command": "python3 ./tests/test1.py"
-        },
-        "presentation": {
-            "reveal": "always",
-            "panel": "dedicated"
-        },
-        "problemMatcher": [
-        ]
-    },
-    {
-        "taskName": "Unittest",
-        "type": "shell",
-        "windows": {
-            "command": "python3 ./tests/unittest1.py"
-        },
-        "osx": {
-            "command": "python3 ./tests/unittest1.py"
-        },
-        "linux": {
-            "command": "python3 ./tests/unittest1.py"
-        },
-        "presentation": {
-            "reveal": "always",
-            "panel": "dedicated"
-        },
-        "problemMatcher": [
-        ]
-    },
-    {
-        "taskName": "EOSIO API",
-        "type": "shell",
-        "windows": {
-            "command": "explorer.exe"
-        },
-        "osx": {
-            "command": "open"
-        },
-        "linux": {
-            "command": "sensible-browser"
-        },
-        "args": [
-            "https://developers.eos.io/eosio-cpp/reference"
-        ],
-        "presentation": {
-            "reveal": "always",
-            "panel": "dedicated"
-        },
-        "problemMatcher": [
-        ]
-    }
-]
+        {
+            "taskName": "EOSIO API",
+            "type": "shell",
+            "windows": {
+                "options": {
+                    "shell": {
+                        "executable": "bash.exe",
+                        "args": [
+                            "-c"
+                        ]
+                    }
+                },            
+                "command": "explorer.exe"
+            },
+            "osx": {
+                "command": "open"
+            },
+            "linux": {
+                "command": "sensible-browser"
+            },
+            "args": [
+                "https://developers.eos.io/eosio-cpp/reference"
+            ],
+            "presentation": {
+                "reveal": "always",
+                "panel": "dedicated"
+            },
+            "problemMatcher": [
+            ]
+        }
+    ]
 }
- 
